--- a/res/layout/list_busdeparture_item.xml
+++ b/res/layout/list_busdeparture_item.xml
@@ -9,10 +9,10 @@
 		android:orientation="horizontal"
 		android:layout_width="100dp"
 		android:layout_height="40dp" android:layout_weight="2">
-		<TextView android:layout_width="wrap_content" android:id="@+id/title"
+		<TextView android:layout_width="wrap_content" android:id="@+id/line"
 			android:layout_height="wrap_content" android:textStyle="bold"
 			android:paddingLeft="10dp" />
-		<TextView android:layout_width="wrap_content" android:id="@+id/detail"
+		<TextView android:layout_width="wrap_content" android:id="@+id/departuretime"
 			android:layout_height="wrap_content" android:paddingLeft="10dp" />
 	</LinearLayout>
 </LinearLayout>
