--- a/res/layout/list_busdeparture_item.xml
+++ b/res/layout/list_busdeparture_item.xml
@@ -2,18 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
-	<ListView android:id="@+id/list" android:layout_width="1px"
-		android:layout_height="1px" android:layout_weight="1" />
+	<ListView android:id="@+id/list" 
+	    android:layout_width="1px"
+		android:layout_height="1px" 
+		android:layout_weight="1" />
 
-	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-		android:orientation="horizontal"
-		android:layout_width="100dp"
-		android:layout_height="40dp" android:layout_weight="2">
-		<TextView android:layout_width="wrap_content" android:id="@+id/line"
-			android:layout_height="wrap_content" android:textStyle="bold"
-			android:paddingLeft="10dp" />
-		<TextView android:layout_width="wrap_content" android:id="@+id/departuretime"
-			android:layout_height="wrap_content" android:paddingLeft="10dp" />
-	</LinearLayout>
+	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		android:layout_width="match_parent" 
+		android:layout_height="match_parent">
+		<TextView android:id="@+id/line" 
+		    android:layout_width="wrap_content"
+			android:layout_height="wrap_content" 
+			android:textStyle="bold"
+			android:layout_alignParentLeft="true"
+			android:paddingLeft="10dp" 
+			android:textSize="30sp" />
+		<TextView android:id="@+id/departuretime" 
+		    android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_alignParentRight="true" 
+			android:paddingRight="10dp"
+			android:textSize="30sp" />
+	</RelativeLayout>
 </LinearLayout>
 
