--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -6,10 +6,13 @@
 		android:layout_height="1px" android:layout_weight="1">
 	</ListView>
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-		android:orientation="horizontal" android:layout_width="match_parent"
+		android:orientation="horizontal" 
+		android:layout_width="match_parent"
 		android:layout_height="match_parent">
-			<TextView android:layout_width="match_parent" android:id="@+id/busstop_name"
-				android:layout_height="wrap_content"
-				android:paddingLeft="10dp" android:textSize="16sp" />
+		<TextView android:id="@+id/busstop_name"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingLeft="10dp"
+			android:textSize="20sp" />
 	</LinearLayout>
 </LinearLayout>	
