Show bus destination in the bus data list.

--- a/res/layout/list_busdeparture_item.xml
+++ b/res/layout/list_busdeparture_item.xml
@@ -14,15 +14,20 @@
 		    android:layout_width="wrap_content"
 			android:layout_height="wrap_content" 
 			android:textStyle="bold"
-			android:layout_alignParentLeft="true"
 			android:paddingLeft="10dp" 
 			android:textSize="30sp" />
+		<TextView android:id="@+id/destination" 
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" 
+            android:paddingLeft="10dp" 
+            android:textSize="20sp"
+            android:layout_toRightOf="@+id/line"/>
 		<TextView android:id="@+id/departuretime" 
 		    android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_alignParentRight="true" 
 			android:paddingRight="10dp"
-			android:textSize="30sp" />
+			android:textSize="30sp"
+			android:layout_alignParentRight="true" />
 	</RelativeLayout>
 </LinearLayout>
 
