--- a/res/menu/busstopmenu.xml
+++ b/res/menu/busstopmenu.xml
@@ -2,4 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/add_favorite"
           android:title="Add to favorites" />
+     <item android:id="@+id/remove_favorite"
+          android:title="Remove from favorites" />
 </menu>
