--- a/res/layout/bus_stop_by_distance_list.xml
+++ b/res/layout/bus_stop_by_distance_list.xml
@@ -2,6 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView android:id="@+id/closestitle" 
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#a3ab11"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
+        android:padding="8px"
+        android:text="Bussan: Closest bus stops"/>
     
     <ListView android:id="@android:id/list" 
         android:layout_width="fill_parent"
