--- a/res/layout/bus_stop_by_name_list.xml
+++ b/res/layout/bus_stop_by_name_list.xml
@@ -4,6 +4,15 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
+    <TextView android:id="@+id/bynametitle" 
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="#a3ab11"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
+        android:padding="8px"
+        android:text="Bussan: All bus stops"/>
+
     <!-- Pretty hint text, and maxLines -->
     <EditText android:id="@+id/search_box" 
         android:layout_width="fill_parent"
