Extract common configuration of header view into separate xml style file, and change the header color to white on blue.

--- a/res/layout/bus_departure_list.xml
+++ b/res/layout/bus_departure_list.xml
@@ -3,12 +3,9 @@
         android:orientation="vertical" android:layout_width="fill_parent"
         android:layout_height="fill_parent">
         <TextView android:id="@+id/bus_departure_title" 
+        style="@style/HeaderTextView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#a3ab11"
-        android:textColor="#ffffff"
-        android:textSize="20sp"
-        android:padding="8px"
         android:text="Bussan: Bus stop"/>       
         <ListView android:id="@android:id/list" 
             android:layout_width="fill_parent"
