Fix indentation of bus departure list.

--- a/res/layout/bus_departure_list_item.xml
+++ b/res/layout/bus_departure_list_item.xml
@@ -4,16 +4,21 @@
 	<TextView android:id="@+id/line" android:layout_width="wrap_content"
 		android:layout_height="wrap_content" 
 		android:textStyle="bold"
-		android:paddingLeft="10dp" 
-		android:textSize="30sp" />
+		android:paddingLeft="10sp" 
+		android:textSize="30sp"
+		android:minWidth="60sp" />
 	<TextView android:id="@+id/destination" 
 	    android:layout_width="wrap_content"
 		android:layout_height="wrap_content" 
-		android:paddingLeft="10dp"
-		android:textSize="20sp" 
+		android:textSize="20sp"
+		android:paddingLeft="10sp"
+		android:paddingBottom="10sp"
+		android:layout_alignParentBottom="true"
 		android:layout_toRightOf="@+id/line" />
 	<TextView android:id="@+id/departuretime"
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:paddingRight="10dp" android:textSize="30sp"
+		android:paddingRight="10sp" 
+		android:textSize="30sp"
+		android:textStyle="bold"
 		android:layout_alignParentRight="true" />
 </RelativeLayout>
