--- a/res/layout/bus_stop_list_item.xml
+++ b/res/layout/bus_stop_list_item.xml
@@ -6,6 +6,6 @@
 	<TextView android:id="@+id/busstop_name" 
 	    android:layout_width="match_parent"
 		android:layout_height="wrap_content" 
-		android:paddingLeft="10dp"
-		android:textSize="20sp" />
+		android:padding="10dp"
+		android:textSize="30sp" />
 </LinearLayout>
