Extract all user visible strings to values/strings.xml, and add Norwegian localization.

--- a/res/layout/bus_stop_by_distance_list.xml
+++ b/res/layout/bus_stop_by_distance_list.xml
@@ -6,7 +6,7 @@
         style="@style/HeaderTextView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Bussan: Closest bus stops"/>
+        android:text="@string/closest_bus_stops_title"/>
     
     <ListView android:id="@android:id/list" 
         android:layout_width="fill_parent"
