--- a/res/layout/frontpage.xml
+++ b/res/layout/frontpage.xml
@@ -8,7 +8,7 @@
         style="@style/HeaderTextView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Bussan: Favorite bus stops"/>
+        android:text="@string/front_page_title"/>
 	
 	<ListView android:id="@android:id/list" 
 	    android:layout_width="fill_parent"
