--- a/res/menu/busstopmenu.xml
+++ b/res/menu/busstopmenu.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/add_favorite"
           android:icon="@drawable/ic_menu_star"
-          android:title="Add to favorites" />
+          android:title="@string/add_to_favorites" />
      <item android:id="@+id/remove_favorite"
           android:icon="@drawable/ic_menu_delete"
-          android:title="Remove from favorites" />
+          android:title="@string/remove_from_favorites" />
      <item android:id="@+id/show_in_map"
           android:icon="@drawable/ic_dialog_map"
-          android:title="Show in map" />
+          android:title="@string/show_in_map" />
 </menu>
