--- a/res/layout/bus_departure_list_item.xml
+++ b/res/layout/bus_departure_list_item.xml
@@ -7,14 +7,22 @@
 		android:paddingLeft="10sp" 
 		android:textSize="30sp"
 		android:minWidth="60sp" />
-	<TextView android:id="@+id/destination" 
-	    android:layout_width="wrap_content"
-		android:layout_height="wrap_content" 
-		android:textSize="20sp"
-		android:paddingLeft="10sp"
-		android:paddingBottom="10sp"
-		android:layout_alignParentBottom="true"
-		android:layout_toRightOf="@+id/line" />
+	<LinearLayout android:orientation="vertical"
+		android:layout_width="wrap_content" android:layout_height="wrap_content"
+		android:layout_toRightOf="@+id/line">
+		<TextView android:id="@+id/destination" android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:textSize="15sp"
+			android:paddingLeft="10sp" />
+		<LinearLayout android:layout_width="wrap_content"
+			android:layout_height="wrap_content">
+			<TextView android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:text="Rutetid:"
+				android:textSize="15sp" android:paddingLeft="10sp" />
+			<TextView android:id="@+id/scheduledtime"
+				android:layout_width="wrap_content" android:layout_height="wrap_content"
+				android:textSize="15sp" android:paddingLeft="10sp" />
+		</LinearLayout>
+	</LinearLayout>
 	<TextView android:id="@+id/departuretime"
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
 		android:paddingRight="10sp" 
