--- a/res/layout/bus_departure_detail.xml
+++ b/res/layout/bus_departure_detail.xml
@@ -9,47 +9,46 @@
 
   <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
     <TextView android:textSize="30sp" android:layout_width="wrap_content"
-              android:text="Line:" android:layout_height="wrap_content"></TextView>
+              android:text="@string/line" android:layout_height="wrap_content"/>
     <TextView android:paddingRight="10sp" android:layout_width="wrap_content"
               android:textSize="30sp" android:textStyle="bold" android:id="@+id/line"
-              android:layout_height="wrap_content" android:layout_alignParentRight="true"></TextView>
+              android:layout_height="wrap_content" android:layout_alignParentRight="true"/>
   </RelativeLayout>
 
-  <RelativeLayout android:layout_width="match_parent"
-                  android:layout_height="wrap_content">
-    <TextView android:textSize="30sp" android:text="From:" android:layout_width="wrap_content"
-              android:layout_height="wrap_content"></TextView>
+  <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+    <TextView android:textSize="30sp" android:text="@string/from" android:layout_width="wrap_content"
+              android:layout_height="wrap_content"/>
     <TextView android:layout_width="wrap_content"
               android:textSize="30sp" android:layout_height="wrap_content" android:id="@+id/from"
-              android:paddingRight="10sp" android:layout_alignParentRight="true"></TextView>
+              android:paddingRight="10sp" android:layout_alignParentRight="true"/>
   </RelativeLayout>
 
   <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
     <TextView android:layout_width="wrap_content"
-              android:textSize="30sp" android:text="To:" android:layout_height="wrap_content"></TextView>
+              android:textSize="30sp" android:text="@string/to" android:layout_height="wrap_content"/>
     <TextView android:paddingLeft="10sp" android:layout_width="wrap_content"
               android:textSize="30sp" android:id="@+id/destination"
               android:paddingRight="10sp" android:layout_height="wrap_content"
-              android:layout_alignParentRight="true"></TextView>
+              android:layout_alignParentRight="true"/>
   </RelativeLayout>
 
   <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
     <TextView android:layout_width="wrap_content"
               android:textSize="30sp" android:layout_height="wrap_content"
-              android:text="Scheduled:"></TextView>
+              android:text="@string/scheduled"/>
     <TextView android:layout_width="wrap_content"
               android:textSize="30sp" android:textStyle="bold" android:id="@+id/scheduledtime"
               android:paddingRight="10sp" android:layout_height="wrap_content"
-              android:layout_alignParentRight="true"></TextView>
+              android:layout_alignParentRight="true"/>
   </RelativeLayout>
 
   <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
     <TextView android:layout_width="wrap_content"
               android:textSize="30sp" android:layout_height="wrap_content"
-              android:text="Estimated:"></TextView>
+              android:text="@string/estimated"/>
     <TextView android:layout_width="wrap_content"
               android:textSize="30sp" android:textStyle="bold" android:id="@+id/estimatedtime"
               android:paddingRight="10sp" android:layout_height="wrap_content"
-              android:layout_alignParentRight="true"></TextView>
+              android:layout_alignParentRight="true"/>
   </RelativeLayout>
 </LinearLayout>
