--- a/res/layout/bus_departure_list_item.xml
+++ b/res/layout/bus_departure_list_item.xml
@@ -16,7 +16,7 @@
 		<LinearLayout android:layout_width="wrap_content"
 			android:layout_height="wrap_content">
 			<TextView android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:text="Rutetid:"
+				android:layout_height="wrap_content" android:text="@string/scheduled"
 				android:textSize="15sp" android:paddingLeft="10sp" />
 			<TextView android:id="@+id/scheduledtime"
 				android:layout_width="wrap_content" android:layout_height="wrap_content"
