Start using ActionBarSherlock for backward compatible action bar.

--- a/res/layout/bus_departure_detail.xml
+++ b/res/layout/bus_departure_detail.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical" android:layout_width="fill_parent"
               android:layout_height="fill_parent">
-
+<!-- 
   <TextView android:id="@+id/busdeparturetitle" style="@style/HeaderTextView"
             android:layout_width="fill_parent" android:layout_height="wrap_content"
-            android:text="@string/bus_departure_detail_title" />
+            android:text="@string/bus_departure_detail_title" /> -->
 
   <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
     <TextView android:textSize="30sp" android:layout_width="wrap_content"
