--- a/res/layout/frontpage.xml
+++ b/res/layout/frontpage.xml
@@ -3,12 +3,12 @@
 	android:orientation="vertical" 
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
-	
+	<!--  
     <TextView android:id="@+id/frontpagetitle"
         style="@style/HeaderTextView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/front_page_title"/>
+        android:text="@string/front_page_title"/>-->
 	
 	<ListView android:id="@android:id/list" 
 	    android:layout_width="fill_parent"
