--- a/res/layout/bus_stop_by_distance_list.xml
+++ b/res/layout/bus_stop_by_distance_list.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView android:id="@+id/closestitle" 
+ <!--   <TextView android:id="@+id/closestitle" 
         style="@style/HeaderTextView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/closest_bus_stops_title"/>
+        android:text="@string/closest_bus_stops_title"/> -->
     
     <ListView android:id="@android:id/list" 
         android:layout_width="fill_parent"
