--- a/app/src/main/res/layout/bus_departure_list_item.xml
+++ b/app/src/main/res/layout/bus_departure_list_item.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent" android:layout_height="match_parent">
 	<TextView android:id="@+id/line" android:layout_width="wrap_content"
