--- a/app/src/main/res/menu/busstopmenu.xml
+++ b/app/src/main/res/menu/busstopmenu.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/add_favorite"
           android:icon="@drawable/ic_menu_star_hollow"
           android:title="@string/add_to_favorites"
-          android:showAsAction="ifRoom" />
+          app:showAsAction="ifRoom" />
      <item android:id="@+id/remove_favorite"
           android:icon="@drawable/ic_menu_star_solid"
           android:title="@string/remove_from_favorites"
-          android:showAsAction="ifRoom" />
+          app:showAsAction="ifRoom" />
      <item android:id="@+id/show_in_map"
           android:icon="@drawable/ic_dialog_map"
           android:title="@string/show_in_map"
-          android:showAsAction="ifRoom" />
+          app:showAsAction="ifRoom" />
      <item android:id="@+id/refresh"
           android:icon="@drawable/ic_menu_refresh"
           android:title="@string/refresh"
-          android:showAsAction="always" /> 
+          app:showAsAction="always" />
      <item android:id="@+id/toggle_favorite"
           android:icon="@drawable/ic_menu_star_hollow"
-          android:showAsAction="always" />  
+          app:showAsAction="always" />
 </menu>
